--- a/tools/pgen/param_table.h.tmpl
+++ b/tools/pgen/param_table.h.tmpl
@@ -36,7 +36,7 @@ ${enum_definition(k, v)};
 /** @} */
 
 const uint32_t param_format_version_be32;
-const struct param_entry parameter_table[];
+const struct param_entry parameter_table[${len(param_table.parameters)}];
 const size_t parameter_table_size;
 
 #endif /* PARAM_TABLE_H_INCLUEDED */
