--- a/tools/CCGui/ui/ccgui.glade
+++ b/tools/CCGui/ui/ccgui.glade
@@ -5,6 +5,7 @@
   <object class="GtkWindow" id="ccgui_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">CCGui</property>
+    <signal name="delete-event" handler="on_ccgui_window_delete_event" swapped="no"/>
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
@@ -31,6 +32,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_ccgui_window_delete_event" swapped="no"/>
                       </object>
                     </child>
                   </object>
@@ -54,6 +56,7 @@
                         <property name="can_focus">False</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_connect_activate" swapped="no"/>
                       </object>
                     </child>
                     <child>
