--- a/tools/CCGui/ui/conn_dlg.glade
+++ b/tools/CCGui/ui/conn_dlg.glade
@@ -7,6 +7,7 @@
     <property name="title" translatable="yes">Connection</property>
     <property name="modal">True</property>
     <property name="type_hint">normal</property>
+    <signal name="close" handler="on_conn_dialog_close" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
         <property name="can_focus">False</property>
@@ -38,6 +39,7 @@
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
+                <signal name="clicked" handler="on_conn_dialog_close" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -107,7 +109,7 @@
                 <property name="has_entry">True</property>
                 <child internal-child="entry">
                   <object class="GtkEntry" id="port_entry">
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
                     <property name="truncate_multiline">True</property>
                     <property name="placeholder_text" translatable="yes">serial device</property>
                   </object>
@@ -116,6 +118,61 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">0</property>
+                <property name="width">1</property>
+                <property name="height">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label3">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="halign">start</property>
+                <property name="label" translatable="yes">Enable Log:</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">2</property>
+                <property name="width">1</property>
+                <property name="height">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkSwitch" id="log_switch">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="halign">start</property>
+                <signal name="activate" handler="on_log_switch_activate" swapped="no"/>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">2</property>
+                <property name="width">1</property>
+                <property name="height">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="log_name">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="truncate_multiline">True</property>
+                <property name="placeholder_text" translatable="yes">short description</property>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">3</property>
+                <property name="width">1</property>
+                <property name="height">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label4">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Log name:</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">3</property>
                 <property name="width">1</property>
                 <property name="height">1</property>
               </packing>
