--- a/tools/CCGui/ui/conn_dlg.ui
+++ b/tools/CCGui/ui/conn_dlg.ui
@@ -2,6 +2,13 @@
 <!-- Generated with glade 3.16.1 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
+  <object class="GtkFileFilter" id="filefilter1">
+    <patterns>
+      <pattern>*.logdb</pattern>
+      <pattern>*.sqlite</pattern>
+      <pattern>*.db</pattern>
+    </patterns>
+  </object>
   <object class="GtkDialog" id="conn_dialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Connection</property>
@@ -156,6 +163,8 @@
               <object class="GtkFileChooserButton" id="sqlite_file">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="action">save</property>
+                <property name="filter">filefilter1</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
